--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ unsafe_code = "forbid"
 
 [workspace]
 resolver = "2"
-members = ["crates/core", "crates/easy/1_two_sum"]
+members = ["crates/core", "crates/easy/1_two_sum", "crates/easy/58_length_of_last_word"]
