--- a/crates/easy/1_two_sum/Cargo.toml
+++ b/crates/easy/1_two_sum/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[lints]
+workspace = true
+
+[lib]
+doctest = false
