--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ members = [
     "crates/easy/58_length_of_last_word",
     "crates/easy/66_plus_one",
     "crates/easy/67_add_binary",
+    "crates/easy/69_sqrtx",
 ]
