--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ members = [
     "crates/easy/69_sqrtx",
     "crates/easy/70_climbing_stairs",
     "crates/easy/83_remove_duplicates_from_sorted_list",
+    "crates/easy/88_merge_sorted_array",
 ]
