--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ members = [
     "crates/easy/70_climbing_stairs",
     "crates/easy/83_remove_duplicates_from_sorted_list",
     "crates/easy/88_merge_sorted_array",
+    "crates/easy/94_binary_tree_inorder_traversal",
 ]
