--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ members = [
     "crates/easy/83_remove_duplicates_from_sorted_list",
     "crates/easy/88_merge_sorted_array",
     "crates/easy/94_binary_tree_inorder_traversal",
+    "crates/easy/100_same_tree",
 ]
