--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ members = [
     "crates/easy/94_binary_tree_inorder_traversal",
     "crates/easy/100_same_tree",
     "crates/easy/101_symmetric_tree",
+    "crates/easy/104_maximum_depth_of_binary_tree",
 ]
