--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ members = [
     "crates/easy/100_same_tree",
     "crates/easy/101_symmetric_tree",
     "crates/easy/104_maximum_depth_of_binary_tree",
+    "crates/easy/108_convert_sorted_array_to_binary_seach_tree",
 ]
