--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ members = [
     "crates/easy/101_symmetric_tree",
     "crates/easy/104_maximum_depth_of_binary_tree",
     "crates/easy/108_convert_sorted_array_to_binary_seach_tree",
+    "crates/easy/110_balanced_binary_tree",
 ]
