--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ members = [
     "crates/easy/108_convert_sorted_array_to_binary_seach_tree",
     "crates/easy/110_balanced_binary_tree",
     "crates/easy/111_minimum_depth_of_binary",
+    "crates/easy/112_path_sum",
 ]
