--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ members = [
     "crates/easy/110_balanced_binary_tree",
     "crates/easy/111_minimum_depth_of_binary",
     "crates/easy/112_path_sum",
+    "crates/easy/118_pascal_triangle",
 ]
