--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,5 @@ members = [
     "crates/easy/118_pascal_triangle",
     "crates/easy/119_pascal_triangle_2",
     "crates/easy/121_best_time_to_buy_and_sell_stock",
+    "crates/easy/125_valid_palindrome",
 ]
