--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,5 @@ members = [
     "crates/easy/119_pascal_triangle_2",
     "crates/easy/121_best_time_to_buy_and_sell_stock",
     "crates/easy/125_valid_palindrome",
+    "crates/easy/136_single_number",
 ]
