finish_169_majority_element

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,5 @@ members = [
     "crates/easy/144_binary_tree_preorder_traversal",
     "crates/easy/145_binary_tree_postorder_traversal",
     "crates/easy/168_excel_sheet_column_title",
+    "crates/easy/169_majority_element",
 ]
