--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,4 +31,5 @@ members = [
     "crates/easy/145_binary_tree_postorder_traversal",
     "crates/easy/168_excel_sheet_column_title",
     "crates/easy/169_majority_element",
+    "crates/easy/171_excel_sheet_column_number",
 ]
