--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,5 @@ members = [
     "crates/easy/168_excel_sheet_column_title",
     "crates/easy/169_majority_element",
     "crates/easy/171_excel_sheet_column_number",
+    "crates/easy/190_reverse_bits",
 ]
