--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,5 @@ members = [
     "crates/easy/169_majority_element",
     "crates/easy/171_excel_sheet_column_number",
     "crates/easy/190_reverse_bits",
+    "crates/easy/191_number_of_one_bits",
 ]
