--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,4 +34,5 @@ members = [
     "crates/easy/171_excel_sheet_column_number",
     "crates/easy/190_reverse_bits",
     "crates/easy/191_number_of_one_bits",
+    "crates/easy/202_happy_number",
 ]
