--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,5 @@ members = [
     "crates/easy/190_reverse_bits",
     "crates/easy/191_number_of_one_bits",
     "crates/easy/202_happy_number",
+    "crates/easy/203_remove_linked_list_elements",
 ]
