--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,4 +37,5 @@ members = [
     "crates/easy/202_happy_number",
     "crates/easy/203_remove_linked_list_elements",
     "crates/easy/205_isomorphic_strings",
+    "crates/easy/206_reverse_linked_list",
 ]
