--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,4 +40,5 @@ members = [
     "crates/easy/206_reverse_linked_list",
     "crates/easy/217_contains_duplicate",
     "crates/easy/219_contains_duplicate_ii",
+    "crates/easy/222_count_complete_tree_nodes",
 ]
