--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,4 +41,5 @@ members = [
     "crates/easy/217_contains_duplicate",
     "crates/easy/219_contains_duplicate_ii",
     "crates/easy/222_count_complete_tree_nodes",
+    "crates/easy/225_implement_stack_using_queues",
 ]
