--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,4 +43,5 @@ members = [
     "crates/easy/222_count_complete_tree_nodes",
     "crates/easy/225_implement_stack_using_queues",
     "crates/easy/226_invert_binary_tree",
+    "crates/easy/228_summary_ranges",
 ]
