--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,4 +44,5 @@ members = [
     "crates/easy/225_implement_stack_using_queues",
     "crates/easy/226_invert_binary_tree",
     "crates/easy/228_summary_ranges",
+    "crates/easy/231_power_of_two",
 ]
