--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,4 +47,5 @@ members = [
     "crates/easy/231_power_of_two",
     "crates/easy/232_implement_queue_using_stacks",
     "crates/easy/234_palindrome_linked_list",
+    "crates/easy/242_valid_anagram",
 ]
