--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,4 +48,5 @@ members = [
     "crates/easy/232_implement_queue_using_stacks",
     "crates/easy/234_palindrome_linked_list",
     "crates/easy/242_valid_anagram",
+    "crates/easy/257_binary_tree_paths",
 ]
