--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,4 +50,5 @@ members = [
     "crates/easy/242_valid_anagram",
     "crates/easy/257_binary_tree_paths",
     "crates/easy/258_add_digits",
+    "crates/easy/263_ugly_number",
 ]
