--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,4 +52,5 @@ members = [
     "crates/easy/258_add_digits",
     "crates/easy/263_ugly_number",
     "crates/easy/268_missing_number",
+    "crates/easy/278_first_bad_version",
 ]
