--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,4 +53,5 @@ members = [
     "crates/easy/263_ugly_number",
     "crates/easy/268_missing_number",
     "crates/easy/278_first_bad_version",
+    "crates/easy/283_move_zeroes",
 ]
