--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,4 +54,5 @@ members = [
     "crates/easy/268_missing_number",
     "crates/easy/278_first_bad_version",
     "crates/easy/283_move_zeroes",
+    "crates/easy/290_word_pattern",
 ]
