--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,4 +55,5 @@ members = [
     "crates/easy/278_first_bad_version",
     "crates/easy/283_move_zeroes",
     "crates/easy/290_word_pattern",
+    "crates/easy/292_nim_game",
 ]
