--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,4 +57,5 @@ members = [
     "crates/easy/290_word_pattern",
     "crates/easy/292_nim_game",
     "crates/easy/303_range_sum_query_immutable",
+    "crates/easy/326_power_of_three",
 ]
