--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,4 +61,5 @@ members = [
     "crates/easy/338_counting_bits",
     "crates/easy/342_power_of_four",
     "crates/easy/344_reverse_string",
+    "crates/easy/345_reverse_vowels_of_a_string",
 ]
