--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,4 +63,5 @@ members = [
     "crates/easy/344_reverse_string",
     "crates/easy/345_reverse_vowels_of_a_string",
     "crates/easy/349_intersection_of_two_arrays",
+    "crates/easy/350_intersection_of_two_arrays_ii",
 ]
