fixed solution 367_valid_perfect_square and finish 374_guess_number_higher_or_lower

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,11 @@
 {
-    "recommendations": [
-        "rust-lang.rust-analyzer",
-        "tamasfe.even-better-toml",
-        "wayou.vscode-todo-highlight",
-        "alefragnani.bookmarks",
-        "christian-kohler.path-intellisense",
-        "fill-labs.dependi"
-    ]
+  "recommendations": [
+    "rust-lang.rust-analyzer",
+    "tamasfe.even-better-toml",
+    "wayou.vscode-todo-highlight",
+    "alefragnani.bookmarks",
+    "christian-kohler.path-intellisense",
+    "fill-labs.dependi",
+    "vscodevim.vim"
+  ]
 }
