--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.lints.rust]
-unsafe_code = "forbid"
+# unsafe_code = "forbid"
 # useused = "allow"
 
 [workspace]
@@ -65,4 +65,5 @@ members = [
     "crates/easy/349_intersection_of_two_arrays",
     "crates/easy/350_intersection_of_two_arrays_ii",
     "crates/easy/367_valid_perfect_square",
+    "crates/easy/374_guess_number_higher_or_lower",
 ]
