--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,4 +67,5 @@ members = [
     "crates/easy/367_valid_perfect_square",
     "crates/easy/374_guess_number_higher_or_lower",
     "crates/easy/383_ransom_note",
+    "crates/easy/387_first_unique_character_in_a_string",
 ]
