--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,4 +68,5 @@ members = [
     "crates/easy/374_guess_number_higher_or_lower",
     "crates/easy/383_ransom_note",
     "crates/easy/387_first_unique_character_in_a_string",
+    "crates/easy/389_find_the_difference",
 ]
