--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,4 +69,5 @@ members = [
     "crates/easy/383_ransom_note",
     "crates/easy/387_first_unique_character_in_a_string",
     "crates/easy/389_find_the_difference",
+    "crates/easy/392_is_subsequence",
 ]
