--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,4 +70,5 @@ members = [
     "crates/easy/387_first_unique_character_in_a_string",
     "crates/easy/389_find_the_difference",
     "crates/easy/392_is_subsequence",
+    "crates/easy/401_binary_watch",
 ]
